k8s/overlays/gke/frontend-env-patch-external-dns.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: meme-generator-frontend
spec:
  template:
    spec:
      containers:
      - name: meme-generator
