k8s/overlays/gke/frontend-service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: meme-generator-frontend
  namespace: meme-generator
  annotations:
    cloud.google.com/backend-config: '{"ports": {"80":"meme-backend-config"}}'
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      name: http
