k8s/overlays/gke/nats-websocket-endpoint.yaml
# Endpoints to route WebSocket traffic to NATS in messaging namespace
apiVersion: v1
kind: Endpoints
metadata:
  name: nats-websocket-proxy
  namespace: meme-generator
subsets:
  - addresses:
      - ip: 192.168.0.110  # Pod IP of nats-0 in messaging namespace
    ports:
      - port: 8080
        protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: nats-websocket-proxy
  namespace: meme-generator
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
    cloud.google.com/backend-config: '{"default": "websocket-backend-config"}'
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: websocket
  sessionAffinity: None
  type: ClusterIP
