k8s/overlays/gke/nats-websocket-service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: nats-websocket-proxy
  namespace: meme-generator
  annotations:
    cloud.google.com/backend-config: '{"ports": {"8080":"websocket-backend-config"}}'
    beta.cloud.google.com/backend-config: '{"ports": {"8080":"websocket-backend-config"}}'
spec:
  selector:
    app: nats-websocket-proxy
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
      name: websocket
