k8s/overlays/gke/ingress-gce.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: meme-generator
  namespace: meme-generator
  annotations:
    kubernetes.io/ingress.class: "gce"
    networking.gke.io/managed-certificates: meme-generator-cert
    networking.gke.io/v1beta1.FrontendConfig: meme-generator-frontend-config
spec:
  defaultBackend:
    service:
      name: meme-generator-frontend
      port:
        number: 80
  rules:
    - host: meme-generator.scaleops-labs.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: meme-generator-frontend
                port:
                  number: 80
          - path: /ws
            pathType: Prefix
            backend:
              service:
                name: nats-websocket-proxy
                port:
                  number: 8080
